[package]
name = "bottle-orm-macro"
version = "0.4.24"
edition = "2024"
authors = ["Murilinho145SG"]
description = "Procedural macros for bottle-orm, a lightweight ORM for Rust"
license = "MIT"
repository = "https://github.com/Murilinho145SG/bottle-orm"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.114", features = ["full", "extra-traits"] }
quote = "1.0.43"
proc-macro2 = "1.0.105"
heck = "0.5.0"
