[package]
name = "bottle-orm"
version = "0.5.0"
edition = "2024"
authors = ["Murilinho145SG"]
description = "A lightweight and simple ORM for Rust built on top of sqlx"
license = "MIT"
repository = "https://github.com/Murilinho145SG/bottle-orm"

[dependencies]
bottle-orm-macro = { version = "0.5.0", path = "../bottle-orm-macro" }
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"tls-native-tls",
	"any",
	"postgres",
	"mysql",
	"sqlite",
	"chrono",
	"uuid",
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"
heck = "0.5.0"
serde = "1.0.228"
thiserror = "2.0.18"
uuid = { version = "1.11", features = [
	"v1",
	"v3",
	"v4",
	"v5",
	"v6",
	"v7",
	"serde",
] }
log = "0.4.29"

[dev-dependencies]
env_logger = "0.11.8"
axum = "0.7"
uuid = { version = "1.11", features = [
	"v1",
	"v3",
	"v4",
	"v5",
	"v6",
	"v7",
	"serde",
] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = "1.0.228"
